Configure security for crud actions

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,18 +22,14 @@ security:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        login:
-            pattern:  ^/demo/secured/login$
-            security: false
-
         secured_area:
-            pattern:    ^/demo/secured/
+            pattern:    ^/admin
             form_login:
-                check_path: /demo/secured/login_check
-                login_path: /demo/secured/login
+                check_path: /admin/login_check
+                login_path: /login
             logout:
-                path:   /demo/secured/logout
-                target: /demo/
+                path:   /admin/logout
+                target: /
             #anonymous: ~
             #http_basic:
             #    realm: "Secured Demo Area"
